...
            guard let self = self else { return }
            
            self.cellImage.contentMode = .scaleAspectFit
            self.likeButton.setImage(UIImage(named: photo.isLiked ? Icons.buttonActivated : Icons.buttonDeactivated), for: .normal)
            self.likeButton.addTarget(target, action: action, for: .touchUpInside)
            self.likeButton.tag = index
            self.likeButton.accessibilityIdentifier = "Like button"
            
            guard let parsedDate = photo.createdAt else {
                self.dateLabel.text = ""
                return
            }
            self.dateLabel.text = dateFormatter.string(from: parsedDate)
...
